Setting up server and client

--- a/.mevnrc
+++ b/.mevnrc
@@ -2,7 +2,7 @@
   "name": "vue-crud",
   "template": "Default",
   "isConfigured": {
-    "client": false,
-    "server": false
+    "client": true,
+    "server": true
   }
 }
